--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,13 @@
-body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+} */
 
 a {
-  color: #00B7FF;
+  /* color: #00B7FF; */
+}
+
+#mapid{
+  height: 520px;
+  width: 100%;
 }
