--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
   // Navigation
   nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
     .container
-      a.navbar-brand.js-scroll-trigger(href='#page-top') RUN BIKES
+      a.navbar-brand.js-scroll-trigger(href='#page-top') BICYCLE NETWORK
       button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
         | Menu
         i.fas.fa-bars
@@ -21,6 +21,8 @@ block content
             a.nav-link.js-scroll-trigger(href='#maps') Bicicletas
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#signup') Contacto
+          li.nav-item
+            a.nav-link.js-scroll-trigger(href='/bicynet/network/bicicletas') Agregar
 
   //Masthead
   header.masthead
@@ -143,5 +145,3 @@ block content
   //Core theme JS
   script(src='/javascripts/scripts.js')
   script(src='/javascripts/map.js')
-
-
