--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
     link(rel='icon' type='image/x-icon' href='/images/favicon.ico')
     
     // Font Awesome icons (free version)
-    script(src='https://use.fontawesome.com/releases/v5.13.0/js/all.js' crossorigin='anonymous')
+    script(src='https://kit.fontawesome.com/d460e0c23b.js' crossorigin='anonymous')
     
     // Google fonts
     link(href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet')
@@ -27,3 +27,4 @@ html
 
   body
     block content
+
