--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,9 +4,15 @@
 } */
 
 .no-style{
-  /* color: #00B7FF; */
   text-decoration: none !important;
   color: #000;
+}
+.no-style-a{
+  text-decoration: none !important;
+  color: #fff;
+}
+.no-style-a:hover{
+  color: #fff;
 }
 .option-btn{
   display: flex;
@@ -14,6 +20,8 @@
 .btn .no-style{
   color: white;
 }
+.btn-no-padding{ padding: 14px 0px 4px;}
+.a-center{margin: 0 auto;}
 
 .option-btn button:nth-child(1){
   margin-right: 10px;
@@ -23,6 +31,40 @@
   height: 520px;
   width: 100%;
 }
+.content-login{
+  width: 100%;
+  padding: 15px 30px;
+}
+.content-login.login{
+  background: url(https://images.pexels.com/photos/133697/pexels-photo-133697.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.content-login.forgot{
+  background: url(https://images.pexels.com/photos/3774023/pexels-photo-3774023.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.forgot p{
+  color: white;
+  text-align: justify;
+}
+.content-login.message{
+  height: 59vh;
+  background: url(https://images.pexels.com/photos/3740446/pexels-photo-3740446.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.message p{
+  color: white; text-align: justify;
+}
+.message .box-multi-function{margin-top: 10vh;}
 
 /* form create bikes */
 .content-form{
@@ -45,6 +87,15 @@ h1 {
   font-weight: 500;
   letter-spacing: 2px;
   padding: 20px 0;
+}
+h2 {
+  margin: 0;
+  color: #fcfcfd;
+  font-size: 25px;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 1px;
+  padding-bottom: 10px;
 }
 .box-multi-function{
   background: rgba(0, 0, 0, 0.4117647058823529);
@@ -71,7 +122,9 @@ h1 {
   margin: 10px 0;
   position: relative;
 }
-input[type="text"]
+input[type="text"],
+input[type="password"],
+input[type="email"]
 {
     width: 100%;
     border: none;
@@ -79,9 +132,13 @@ input[type="text"]
     background: transparent;
     color: #000;
 }
-input[type="text"]:focus{
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus{
     outline: none;
 }
+
 input[type="submit"] {
     background: #2b28ee;
     color: #ffffff;
@@ -100,8 +157,12 @@ input[type="submit"]:hover {
     transition-duration: 1s;
 }
 p.w3l-register-p{
+  color: white;
+  font-size: 13px;
   text-align: center;
   margin-top: 2em;
+}
+.background-linear{
   background-image: linear-gradient(white, white);
   background-position: 50% 100%;
   background-repeat: no-repeat;
@@ -116,4 +177,93 @@ p.w3l-register-p{
 }
 .w3l-register-p a:hover{
   color: greenyellow;
+}
+
+.renovar {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+.renovar p {
+  color: #ffffff;
+  text-align: center;
+  margin: 0px;
+font-size: 13px;
+}
+a {
+  color: #eee;
+  font-size: 14px;
+  text-decoration: none;
+}
+.toggle {
+  top: 7px;
+  right: 7px;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  cursor: pointer;
+  transition: all .5s ease;
+}
+span{
+  color: white;
+}
+.formulario {
+  display: none;
+}
+
+.formulario:nth-child(1) {
+  display: block;
+}
+
+/* responsive */
+
+@media(max-width:768px) {
+  h1 {
+      font-size: 47px;
+  }
+}
+@media(max-width:667px) {
+  h1 {
+      font-size: 45px;
+  }
+}
+@media(max-width:480px) {
+  .box-multi-function{
+  margin: 0 3vw;
+  }
+  h1 {
+      font-size: 38px;
+  }
+  input[type="submit"] {
+    font-size: 14px;
+    padding: 12px 10px;
+  }
+}
+@media(max-width:414px) {
+  h1 {
+      font-size: 34px;
+  }
+}
+@media(max-width:384px) {
+  h1 {
+      font-size: 30px;
+  }
+  .content-login{
+    padding: 15px 15px;
+  }
+  .box-multi-function{
+    margin: 0;
+    padding: 15px;
+  }
+}
+@media(max-width:320px) {
+  h1 {
+      font-size: 25px;
+  }
+  .renovar p {
+      text-align: left;
+  }
+  .renovar {
+      display: block;
+  }
 }
