--- a/views/index.pug
+++ b/views/index.pug
@@ -124,24 +124,7 @@ block content
               h4.text-uppercase.m-0 Phone
               hr.my-4
               .small.text-black-50 +1 (555) 902-8832
-      .social.d-flex.justify-content-center
-        a.mx-2(href='#!')
-          i.fab.fa-twitter
-        a.mx-2(href='#!')
-          i.fab.fa-facebook-f
-        a.mx-2(href='#!')
-          i.fab.fa-github
 
   //Footer
-  footer.footer.bg-black.small.text-center.text-white-50
-    .container Copyright &copy; Your Website 2020
-
-  //Bootstrap core JS
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
-  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js')
-  //Third party plugin JS
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js')
-
-  //Core theme JS
-  script(src='/javascripts/scripts.js')
+  include footer
   script(src='/javascripts/map.js')
