--- a/views/bicicletas/index.pug
+++ b/views/bicicletas/index.pug
@@ -2,14 +2,16 @@ extends ../layout
 
 block content
 
-    h1
-        a(href='/bicynet/network/bicicleta') Nueva Bicicleta
+    .renovar.btn.btn-no-padding.btn-info(style="width: 350px; margin: 0 auto; margin-top: 25px; margin-bottom: 25px;")
+        a.no-style-a.a-center(href='/bicynet/network/bicicleta') 
+            h4 Nueva Bicicleta
 
     .container.table-responsive
         table.table
             thead
                 tr
                     th(scope='col') #
+                    th(scope='col') Code
                     th(scope='col') Color
                     th(scope='col') Modelo
                     th(scope='col') Ubicacion
@@ -18,6 +20,7 @@ block content
                 each bici in bicis 
                     tr
                         td(scope='row')=bici.id
+                        td=bici.code
                         td=bici.color
                         td=bici.modelo
                         td=bici.ubicacion
@@ -28,7 +31,10 @@ block content
                                 input(type='hidden' name='id' value= bici.id)
                                 button.link-button.btn.btn-danger(type='submit' name='submit_param' value='submit_value')
                                     ='Eliminar'
-        br  
-        br                         
-        p.w3l-register-p
-            a.btn.btn-secondary(href='/bicynet') Bicycle Network 
+    br  
+    br                         
+    br                         
+    p.w3l-register-p
+        a.btn.btn-secondary(href='/bicynet') Bicycle Network 
+    
+    include ../footer
