Agregado de vistas y actualizacion de controller para errores en validacion de token y correccion de cuerpo de email verificacion

--- a/views/login/resetPassword.pug
+++ b/views/login/resetPassword.pug
@@ -12,16 +12,18 @@ block content
                 form(action='/login/resetpassword' method='POST' onsubmit='return validar1();')
                     input#email(type='hidden' name='email' value= usuario.email)
                     .grupo-formulario
-                        .grupo
+                        .grupo(class=errors.confirm_password ? 'es-invalid' : '')
                             i.fas.fa-unlock
-                            input#pwd.controlform(type='password' name='password' placeholder='Contraseña' required='required' class=errors.password ? 'es-invalid' : '')
+                            input#pwd.controlform(type='password' name='password' placeholder='Contraseña' required='required')
                     .grupo-formulario
-                        .grupo
+                        .grupo(class=errors.confirm_password ? 'es-invalid' : '')
                             i.fas.fa-unlock
-                            input#pwd-confirm.controlform(type='password' name='confirm_password' placeholder='Ingrese Contraseña nuevamente' required='required' class=errors.confirm_password ? 'es-invalid' : '')
+                            input#pwd-confirm.controlform(type='password' name='confirm_password' placeholder='Ingrese Contraseña nuevamente' required='required')
                     if errors.confirm_password
+                        p
                         small#pwdconfirmhelp.text-danger
                              = errors.confirm_password.message
+                        p
                     input(type='submit' value='Restablecer')
         
     include ../footer
