Actualizacion de estilos CSS

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -215,6 +215,10 @@ span{
   display: block;
 }
 
+/* clase de errores */
+.es-invalid{
+  border: 1px solid red;
+}
 /* responsive */
 
 @media(max-width:768px) {
