--- a/views/login/forgotpassword.pug
+++ b/views/login/forgotpassword.pug
@@ -1,16 +1,16 @@
 extends ../layout
 
 block content 
+    include ../navbar
     .content-login.forgot
-
         .box-multi-function
             .formulario
-                h1 Recuperar Contraseña
+                h2 Recuperar Contraseña
                 p Por favor, ingrese su email de registro, se le enviara un mensaje con las instrucciones para la restauración de su contraseña.
                 if info && info.message 
                     div.alert.alert-danger
                         = info.message
-                form(action='/login/forgotpassword' method='POST' onsubmit='return validar1();')
+                form(action='/login/forgotpassword' method='POST')
                     .grupo-formulario
                         .grupo
                             i.fas.fa-at
