--- a/views/login/forgotpswMessage.pug
+++ b/views/login/forgotpswMessage.pug
@@ -1,6 +1,7 @@
 extends ../layout
 
 block content 
+    include ../navbar
     .content-login.message
         .box-multi-function
             .formulario
