--- a/views/login/resetPassword.pug
+++ b/views/login/resetPassword.pug
@@ -1,8 +1,8 @@
 extends ../layout
 
 block content 
+    include ../navbar
     .content-login.forgot
-        h1 Restablecimineto de Contraseña
         .box-multi-function
             .formulario
                 h2 Ingrese su nueva contraseña
