--- a/views/bicicletas/create.pug
+++ b/views/bicicletas/create.pug
@@ -1,11 +1,12 @@
 extends ../layout
 
 block content 
+    include ../navbar
 
     .content-form
         .box-multi-function
             .formulario
-                h1 Nueva Bicicleta
+                h2 Nueva Bicicleta
                 form(action='/bicynet/network/bicicleta' method='POST')
                     .grupo-formulario
                         .grupo
