--- a/views/bicicletas/index.pug
+++ b/views/bicicletas/index.pug
@@ -1,40 +1,37 @@
 extends ../layout
 
 block content
+    include ../navbar
 
-    .renovar.btn.btn-no-padding.btn-info(style="width: 350px; margin: 0 auto; margin-top: 25px; margin-bottom: 25px;")
-        a.no-style-a.a-center(href='/bicynet/network/bicicleta') 
-            h4 Nueva Bicicleta
+    .content-login.register
+        .renovar.btn.btn-no-padding.btn-info.margin-top-90(style="width: 350px; margin: 0 auto; margin-top: 25px; margin-bottom: 25px;")
+            a.no-style-a.a-center(href='/bicynet/network/bicicleta') 
+                h4 Nueva Bicicleta
 
-    .container.table-responsive
-        table.table
-            thead
-                tr
-                    th(scope='col') #
-                    th(scope='col') Code
-                    th(scope='col') Color
-                    th(scope='col') Modelo
-                    th(scope='col') Ubicacion
-                    th(scope='col') Opciones
-            tbody
-                each bici in bicis 
+        .container.table-responsive
+            table.table
+                thead
                     tr
-                        td(scope='row')=bici.id
-                        td=bici.code
-                        td=bici.color
-                        td=bici.modelo
-                        td=bici.ubicacion
-                        td.option-btn
-                            button.link-buttom.btn.btn-success
-                                a.no-style(href=`/bicynet/network/bicicleta/${bici.id}`) Actualizar
-                            form.inline(method='post' action=`/bicynet/network/bicicleta/${bici.id}`)
-                                input(type='hidden' name='id' value= bici.id)
-                                button.link-button.btn.btn-danger(type='submit' name='submit_param' value='submit_value')
-                                    ='Eliminar'
-    br  
-    br                         
-    br                         
-    p.w3l-register-p
-        a.btn.btn-secondary(href='/bicynet') Bicycle Network 
+                        th(scope='col') #
+                        th(scope='col') Code
+                        th(scope='col') Color
+                        th(scope='col') Modelo
+                        th(scope='col') Ubicacion
+                        th(scope='col') Opciones
+                tbody
+                    each bici in bicis 
+                        tr
+                            td(scope='row')=bici.id
+                            td=bici.code
+                            td=bici.color
+                            td=bici.modelo
+                            td=bici.ubicacion
+                            td.option-btn
+                                button.link-buttom.btn.btn-success
+                                    a.no-style(href=`/bicynet/network/bicicleta/${bici.id}`) Actualizar
+                                form.inline(method='post' action=`/bicynet/network/bicicleta/${bici.id}`)
+                                    input(type='hidden' name='id' value= bici.id)
+                                    button.link-button.btn.btn-danger(type='submit' name='submit_param' value='submit_value')
+                                        ='Eliminar'
     
     include ../footer
