agregacion de variables de ambiente para envio de email

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='Web')
     meta(name='author' content='JR')
-    link(rel='icon' type='image/x-icon' href='/images/favicon.ico')
+    link(rel='icon' type='image/x-icon' href='/images/bicycle.ico')
     
     // Font Awesome icons (free version)
     script(src='https://kit.fontawesome.com/d460e0c23b.js' crossorigin='anonymous')
